Revert "[Modernize Code] Turn Editpart children into typed List"
This reverts commit 85ffd4dbee3542e0af9e5c77c6395cdd2a3a3a40.